<resources>
    <string name="app_name">TV9 MoJo</string>
    <string name="uploadImages">Set your image</string>
    <string name="msg_loading">Uploading…</string>
    <string name="buffering_string">Buffering&#8230;</string>
    <string name="toast_message">Playback completed.</string>
    <string name="pick_file">Pick file</string>
    <string name="upload_file">Upload file</string>
    <string name="toast_pick_file_error">Unable to pick file. Check status of file manager.</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="register">REGISTER</string>
    <string name="login_txt">LOGIN</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="verify_code">Verification OTP</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="Your_API_Key">AIzaSyDF4kZNHrkNno1C3p2zFBex9n5HsEkMxnQ</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login">Login</string>
    <string name="tv9_mojo">TV9 MoJo</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <string name="user_name">user name</string>
</resources>
